# tg_bot_for_consultations

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
consbot/: alembic.ini  args.py  deps.py  enums.py
consbot/bot/: __main__.py  service.py
consbot/bot/dialogs/: commands.py  messages.py  router.py  states.py
consbot/bot/dialogs/admin/: keyboards.py  router.py
consbot/bot/dialogs/consultant/: router.py
consbot/bot/dialogs/start/: dialog.py
consbot/bot/dialogs/start/windows/: menu.py
consbot/bot/filters/: role.py
consbot/bot/middlewares/: base.py  db.py  settings.py  storage.py  uow.py  user.py
consbot/bot/routers/: router.py
consbot/bot/routers/admin/: router.py
consbot/bot/routers/user/: router.py
consbot/db/: base.py  holder.py  models.py  uow.py
consbot/db/migrations/: env.py
consbot/db/repositories/: base.py  stat.py  user.py
consbot/utils/: db.py
consbot/utils/bot/: commands.py  dialogs.py  handlers.py
consbot/utils/consultants/: models.py  storage.py
consbot/utils/users/: models.py  storage.py
docker/: bot.dockerfile
src/: alembic.ini  cli.py  config.py
src/db/: engine.py  holder.py  mixins.py  models.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2023-08-27_725cd142b98d_init_db.py
src/db/repositories/: base.py  stat.py  user.py
src/filters/: role.py
src/middlewares/: db.py  user.py
src/routers/: router.py
src/routers/admin/: keyboards.py  router.py
src/routers/consultant/: router.py
src/routers/user/: router.py
