[tool.poetry]
name = "tg-bot-for-consultations"
version = "0.1.0"
description = ""
authors = ["Prisma"]
readme = "README.md"
packages = [{include = "tg_bot_for_consultations"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
sqlalchemy = "^2.0.20"
sqlalchemy-utils = "^0.41.1"
aiogram-dialog = "2.0.0.b22"
alembic = "^1.11.3"
pydantic-settings = "^2.0.3"
pre-commit = "^3.3.3"
mypy = "^1.5.1"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]

[tool.isort]
known_local_folder = "backend"
py_version = "311"
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "sqlalchemy_utils.*"
ignore_missing_imports = true
