[tool.poetry]
name = "consbot"
version = "0.1.0"
description = ""
authors = ["Prisma"]
readme = "README.md"
packages = [{include = "consbot"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.22"
sqlalchemy-utils = "^0.41.1"
pydantic-settings = "^2.0.3"
aiogram = "^3.1.1"
aiogram-dialog = "^2.0.0"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
aiomisc = "^17.3.23"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]

[tool.isort]
known_local_folder = "backend"
py_version = "311"
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "sqlalchemy_utils.*"
ignore_missing_imports = true
