[tool.poetry]
name = "consbot"
version = "0.1.0"
description = "Telegram bot for anonymous consultations"
authors = ["Sergey Natalenko <sergey.natalenko@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiomisc = "^17.3.41"
aiomisc-dependency = "^0.1.20"
SQLAlchemy = "^2.0.28"
alembic = "^1.13.1"
aiogram = "^3.4.1"
aiogram-dialog = "^2.1.0"
argclass = "^1.0.0"
orjson = "^3.9.15"
uvloop = "^0.19.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
bandit = "^1.7.8"
ruff = "^0.3.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = "test_*"
python_functions = "test_*"
python_classes = "TestSuite*"
addopts = "-p no:cacheprovider"

[tool.black]
target-version = ["py311"]

[tool.isort]
known_local_folder = ["consbot", "tests"]
py_version = "311"
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "aiomisc_dependency.*"
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = "argclass.*"
ignore_missing_imports = true

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
]

line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = [
    "BLE",
    "C90",
    "E",
    "F",
    "G",
    "I",
    "ICN",
    "ISC",
    "PLE",
    "Q",
    "RUF006",
    "RUF100",
    "T10",
    "T20",
    "TID",
    "UP",
    "W",
]
ignore = ["ISC001"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"